--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.2"
     annotationProcessor "androidx.room:room-compiler:2.5.2"
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.apache.commons:commons-text:1.10.0'
 
 }
