--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
 }
 
+
 android {
     namespace 'com.pigeoff.menu'
     compileSdk 34
@@ -9,9 +10,14 @@ android {
     defaultConfig {
         applicationId "com.pigeoff.menu"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
+
+        // ACRA Configuration
+        buildConfigField("String", "ACRA_ENDPOINT", "\"https://acra.pigeoff.pw/report\"")
+        buildConfigField("String", "ACRA_USER", "\"FmZBl6uuxYy3HKcy\"")
+        buildConfigField("String", "ACRA_PASSWORD", "\"5A1ry81EBQN7IESZ\"")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -51,5 +57,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.5.2"
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.apache.commons:commons-text:1.10.0'
+    implementation 'ch.acra:acra-http:5.11.3'
+    implementation 'ch.acra:acra-toast:5.11.3'
 
 }
