--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.pigeoff.menu"
         minSdk 24
         targetSdk 34
-        versionCode 4
-        versionName "1.3"
+        versionCode 5
+        versionName "1.4"
 
         // ACRA Configuration
         buildConfigField("String", "ACRA_ENDPOINT", "\"https://acra.pigeoff.pw/report\"")
@@ -61,4 +61,6 @@ dependencies {
     implementation 'ch.acra:acra-toast:5.11.3'
     implementation 'org.jsoup:jsoup:1.17.1'
     implementation 'org.json:json:20231013'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'commons-io:commons-io:2.11.0'
 }
